# ML-EMG-G

./: .gitignore  .venv  README.md  analyze_features.py  combine_features.py  dataset_utils.py  domain_adaptation.py  evaluate_preprocessing.py  extract_myo_features.py  generate_slides_charts.py  loso_train.py  models.py  pipeline.py  pyproject.toml  rami_features.py  time_features.py  train.py  tune_all.py  tune_knn.py  tune_lgbm.py  tune_rf.py  tune_svm.py  tune_xgb.py
datasets/: README.md
datasets/db1/: README.md  config.yaml  data
datasets/db1/training/default/et-tuned_acc0.067/: config.yaml
datasets/db1/training/default/et-tuned_acc0.075/: config.yaml
datasets/db1/training/default/et-tuned_acc0.124/: config.yaml
datasets/db1/training/default/et-tuned_acc0.129/: config.yaml
datasets/myo/: README.md  config.yaml  data  features
datasets/ninapro_db1/: README.md  config.yaml  data
datasets/rami/: README.md  config.yaml  data  features
datasets/rami/analysis/: feature_importance.csv  summary.ipynb
datasets/rami/models/loso_lda/: lda_fold0.joblib  lda_fold1.joblib  lda_fold10.joblib  lda_fold2.joblib  lda_fold3.joblib  lda_fold4.joblib  lda_fold5.joblib  lda_fold6.joblib  lda_fold7.joblib  lda_fold8.joblib  lda_fold9.joblib
datasets/rami/training/: loso_boosting.csv  loso_calibrated.csv  loso_channel.csv  loso_lda_summary.csv  loso_model_comparison.csv  loso_per_pos_Pos1.csv  loso_per_pos_Pos2.csv  loso_per_pos_Pos3.csv  loso_per_pos_Pos4.csv  loso_per_pos_Pos5.csv  loso_percentile.csv  loso_summary.csv  loso_summary_Pos1.csv  loso_summary_Pos2.csv  loso_summary_Pos3.csv  loso_summary_Pos4.csv  loso_summary_Pos5.csv  loso_summary_within_subject.csv  loso_svm_summary.csv  within_subject_comparison_within_subject.csv
scripts/: run_loso_calibrated.sh  run_preprocessing_eval.sh
src/emg_classification/: __init__.py
src/emg_classification/cli/: extract.py  train.py
src/emg_classification/config/: __init__.py  features.yaml  schema.py
src/emg_classification/data/: __init__.py  base.py  windowing.py
src/emg_classification/data/loaders/: __init__.py  db1_loader.py  mat_loader.py  myo_loader.py  rami_loader.py  text_loader.py
src/emg_classification/evaluation/: __init__.py  cross_validation.py
src/emg_classification/features/: __init__.py  combined.py  gpu.py  histogram.py  spectral.py  time_domain.py  wavelet.py
src/emg_classification/models/: __init__.py  factory.py
src/emg_classification/preprocessing/: __init__.py  normalizers.py  signal_filters.py
tests/: __init__.py  test_features.py  test_gpu_features.py
(+130 files in other folders)
