[project]
name = "emg-classification"
version = "0.1.0"
description = "A reusable library for EMG signal classification"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "joblib>=1.3.0",
    "wfdb>=4.3.0",
    "tqdm>=4.67.1",
    "pywavelets>=1.6.0",
]

[tool.uv]
extra-index-url = ["https://pypi.nvidia.com"]

[project.optional-dependencies]
boosting = [
    "xgboost>=2.1.4",
    "lightgbm>=4.0.0",
]
gpu = [
    "xgboost>=2.1.4",
    "lightgbm>=4.0.0",
    "cuml-cu12>=24.0",
    # Note: cuML requires separate installation via conda or pip with CUDA 12.x
]
wavelet = [
    "PyWavelets>=1.4.0",
]
jupyter = [
    "jupyter>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "emg-classification[boosting,wavelet,jupyter,dev]",
]

[project.scripts]
emg-extract = "emg_classification.cli.extract:main"
emg-train = "emg_classification.cli.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emg_classification"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

